--- a/HW1/Homework_1_PB.ipynb
+++ b/HW1/Homework_1_PB.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,18 +91,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "downloading trainDevTestTrees_PTB.zip\n",
-      "extracting\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "train, val, test = torchtext.datasets.SST.splits(\n",
     "    TEXT, LABEL,\n",
@@ -118,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,35 +180,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Size of text batch [max sent length, batch size] torch.Size([17, 10])\n",
+      "Size of text batch [max sent length, batch size] torch.Size([19, 10])\n",
       "Second in batch Variable containing:\n",
-      "  5204\n",
-      "   700\n",
-      "  2086\n",
-      "   109\n",
-      "    28\n",
-      "    15\n",
-      "    70\n",
-      "   149\n",
-      "    15\n",
-      "     7\n",
-      " 12334\n",
-      " 10272\n",
-      "    12\n",
-      "     7\n",
-      "   604\n",
-      " 13449\n",
-      "     2\n",
-      "[torch.LongTensor of size 17]\n",
+      "   76\n",
+      " 3366\n",
+      "  169\n",
+      "   18\n",
+      "    3\n",
+      "   44\n",
+      "  145\n",
+      "  105\n",
+      "  170\n",
+      "  141\n",
+      "  210\n",
+      "  216\n",
+      "    3\n",
+      "    5\n",
+      "  239\n",
+      "  441\n",
+      "  357\n",
+      "    2\n",
+      "    1\n",
+      "[torch.LongTensor of size 19]\n",
       "\n",
-      "Converted back to string:  Completely awful Iranian drama ... as much fun as a grouchy ayatollah in a cold mosque .\n"
+      "Converted back to string:  An enormously entertaining movie , like nothing we 've ever seen before , and yet completely familiar . <pad>\n"
      ]
     }
    ],
@@ -237,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -246,10 +239,10 @@
      "text": [
       "Size of label batch [batch size] torch.Size([10])\n",
       "Second in batch Variable containing:\n",
-      " 2\n",
+      " 1\n",
       "[torch.LongTensor of size 1]\n",
       "\n",
-      "Converted back to string:  negative\n"
+      "Converted back to string:  positive\n"
      ]
     }
    ],
@@ -325,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,27 +347,179 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(3610, 3310)"
+       "(3610, 3310, {'negative', 'positive'})"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "def make_bow_vector(sentence, vocab):\n",
+    "    vec = torch.zeros(len(vocab))\n",
+    "    for word in sentence:\n",
+    "#         print(int(word.data.numpy()[0]))\n",
+    "        vec[vocab[word]] += 1\n",
+    "    return vec.view(1, -1)\n",
+    "\n",
     "next(train.text), next(train.label)\n",
-    "p,q = 0,0\n",
+    "p,q,n = 0,0,set()\n",
     "for lab in train.label:\n",
     "    p+=lab=='positive'\n",
     "    q+=lab=='negative'\n",
-    "p,q"
+    "    n|=set([lab])\n",
+    "p,q,n\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "prior on positive 0.5216763005780347 prior on negative 0.47832369942196534\n",
+      "torch.Size([16316, 1]) torch.Size([1])\n",
+      "torch.Size([5, 10])\n",
+      "\n",
+      "    5     0     0  ...      0     0     0\n",
+      "[torch.FloatTensor of size 1x16316]\n",
+      "\n",
+      "\n",
+      "    5     0     0  ...      0     0     0\n",
+      "[torch.FloatTensor of size 1x16316]\n",
+      "\n",
+      "\n",
+      "    5     0     0  ...      0     0     0\n",
+      "[torch.FloatTensor of size 1x16316]\n",
+      "\n",
+      "\n",
+      "    5     0     0  ...      0     0     0\n",
+      "[torch.FloatTensor of size 1x16316]\n",
+      "\n",
+      "\n",
+      "    5     0     0  ...      0     0     0\n",
+      "[torch.FloatTensor of size 1x16316]\n",
+      "\n",
+      "\n",
+      "    5     0     0  ...      0     0     0\n",
+      "[torch.FloatTensor of size 1x16316]\n",
+      "\n",
+      "\n",
+      "    5     0     0  ...      0     0     0\n",
+      "[torch.FloatTensor of size 1x16316]\n",
+      "\n",
+      "\n",
+      "    5     0     0  ...      0     0     0\n",
+      "[torch.FloatTensor of size 1x16316]\n",
+      "\n",
+      "\n",
+      "    5     0     0  ...      0     0     0\n",
+      "[torch.FloatTensor of size 1x16316]\n",
+      "\n",
+      "\n",
+      "    5     0     0  ...      0     0     0\n",
+      "[torch.FloatTensor of size 1x16316]\n",
+      "\n",
+      "\n",
+      "    5     0     0  ...      0     0     0\n",
+      "    5     0     0  ...      0     0     0\n",
+      "    5     0     0  ...      0     0     0\n",
+      "       ...          ⋱          ...       \n",
+      "    5     0     0  ...      0     0     0\n",
+      "    5     0     0  ...      0     0     0\n",
+      "    5     0     0  ...      0     0     0\n",
+      "[torch.FloatTensor of size 10x16316]\n",
+      "\n"
+     ]
+    },
+    {
+     "ename": "RuntimeError",
+     "evalue": "size mismatch, m1: [16316 x 1], m2: [5 x 10] at /Users/soumith/minicondabuild3/conda-bld/pytorch_1512381214802/work/torch/lib/TH/generic/THTensorMath.c:1416",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-129-94c44c5a7201>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     59\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mone_hot\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     60\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 61\u001b[0;31m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmod\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtext\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     62\u001b[0m     \u001b[0;32mbreak\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/lib/python3.6/site-packages/torch/nn/modules/module.py\u001b[0m in \u001b[0;36m__call__\u001b[0;34m(self, *input, **kwargs)\u001b[0m\n\u001b[1;32m    323\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mhook\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_forward_pre_hooks\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    324\u001b[0m             \u001b[0mhook\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minput\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 325\u001b[0;31m         \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mforward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    326\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mhook\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_forward_hooks\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    327\u001b[0m             \u001b[0mhook_result\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mhook\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minput\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mresult\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-129-94c44c5a7201>\u001b[0m in \u001b[0;36mforward\u001b[0;34m(self, batch_iter)\u001b[0m\n\u001b[1;32m     47\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mforward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mbatch_iter\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     48\u001b[0m         \u001b[0mint_tensor\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mVariable\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mFloatTensor\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbatch_iter\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnumpy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 49\u001b[0;31m         \u001b[0mx\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlinear\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mint_tensor\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     50\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     51\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-129-94c44c5a7201>\u001b[0m in \u001b[0;36m<lambda>\u001b[0;34m(x)\u001b[0m\n\u001b[1;32m     43\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlinear\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mlambda\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmm\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mVariable\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mw\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtranspose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcuda\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mVariable\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mb\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcuda\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     44\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 45\u001b[0;31m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlinear\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mlambda\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmm\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mVariable\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mw\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtranspose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mVariable\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mb\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     46\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     47\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mforward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mbatch_iter\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mRuntimeError\u001b[0m: size mismatch, m1: [16316 x 1], m2: [5 x 10] at /Users/soumith/minicondabuild3/conda-bld/pytorch_1512381214802/work/torch/lib/TH/generic/THTensorMath.c:1416"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "from torch.autograd import Variable \n",
+    "\n",
+    "p_pos,p_neg = p/(p+q), q/(p+q)\n",
+    "print('prior on positive',p_pos,'prior on negative',p_neg)\n",
+    "\n",
+    "\n",
+    "def b_const(train):\n",
+    "    p,n = 0,0\n",
+    "    for lab in train.label:\n",
+    "        p+=lab=='positive'\n",
+    "        n+=lab=='negative'\n",
+    "    return torch.log(torch.FloatTensor([float(p)/float(n)]))\n",
+    "\n",
+    "def log_counts(train,TEXT):\n",
+    "    \"\"\" Calculate log counts as in 1. paper \"\"\"\n",
+    "    pos, neg = torch.zeros(len(TEXT.vocab.stoi)),torch.zeros(len(TEXT.vocab.stoi))\n",
+    "    for itm in train:\n",
+    "\n",
+    "        bow_vec = make_bow_vector(itm.text, TEXT.vocab.stoi)\n",
+    "        if itm.label=='positive':\n",
+    "            pos = torch.add(pos, bow_vec)\n",
+    "        elif itm.label=='negative':\n",
+    "            neg = torch.add(neg, bow_vec)\n",
+    "    \n",
+    "    pos = pos.apply_(lambda x: min(x,1.)) + 1.\n",
+    "    neg = neg.apply_(lambda x: min(x,1.)) + 1.\n",
+    "    num = pos / pos.norm(p=1)\n",
+    "    den = neg / neg.norm(p=1)\n",
+    "    return torch.log(num/den)\n",
+    "\n",
+    "b = b_const(train)\n",
+    "w = log_counts(train,TEXT)\n",
+    "print(w.transpose(0,1).size(),b.size())\n",
+    "\n",
+    "class NB_unigram(nn.Module):\n",
+    "    def __init__(self,w,b,use_cuda):\n",
+    "        super(NB_unigram,self).__init__()\n",
+    "        self.use_cuda = use_cuda\n",
+    "        \n",
+    "        if self.use_cuda:\n",
+    "            self.linear = lambda x: torch.mm(Variable(w.transpose(0,1)).cuda(),x) + Variable(b).cuda()\n",
+    "        else:\n",
+    "            self.linear = lambda x: torch.mm(Variable(w.transpose(0,1)),x) + Variable(b)\n",
+    "        \n",
+    "    def forward(self,batch_iter):\n",
+    "        int_tensor = Variable(torch.FloatTensor(batch_iter.data.numpy()))\n",
+    "        x = self.linear(int_tensor)\n",
+    "        return x\n",
+    "    \n",
+    "mod = NB_unigram(w,b,use_cuda=False)\n",
+    "for b in val_iter:\n",
+    "    \n",
+    "    print(b.text.size())\n",
+    "    for i in b.text.data.transpose(0,1):\n",
+    "        print(make_bow_vector(i,TEXT.vocab.stoi))\n",
+    "    one_hot = torch.cat([make_bow_vector(i,TEXT.vocab.stoi) for i in b.text.data.transpose(0,1)])\n",
+    "    print(one_hot)\n",
+    "\n",
+    "    print(mod(b.text))\n",
+    "    break"
    ]
   },
   {
